--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -24,6 +24,7 @@
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
                                     <a class="dropdown-item" href="{% url 'products' %}">All Paintings</a>
+                                    <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="{% url 'products' %}?category=flowers">Flowers</a>
                                     <a class="dropdown-item" href="{% url 'products' %}?category=animals">Animals</a>
                                     <a class="dropdown-item" href="{% url 'products' %}?category=landscape">Landscape</a>
