--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -18,7 +18,7 @@
 <!--================Single Product Area =================-->
 <div class="product_image_area">
 <div class="container">
-  <div class="row justify-content-center">
+  <div class="row text-center">
     <div class="col-lg-12">
         <div class="single_product_img">
           {% if product.image %}
