Add collapse sections to privacy policy

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,7 +11,7 @@
                         <div class="banner_text_iner">
                             <h1>Hanneles Original Art</h1>
                             <p>Don't buy commodity prints when you can buy affordable original paintings!</p>
-                            <a href="{% url 'products' %}" aria-label="Visit our paintings page" class="btn_1">Buy real
+                            <a href="{% url 'products' %}" aria-label="Visit our paintings page" class="btn_1 btn-white-text">Buy real
                                 art</a>
                         </div>
                     </div>
