--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,9 +1,4 @@
-/* Bootstrap 4 Navbar */
-/* .dropdown-toggle.active-dropdown::after {
-    transform: rotate(-90deg);
-} */
-
-
+/* Base formatting */
 i {
     color: #795376 !important;
 }
@@ -13,8 +8,8 @@ a {
 a:hover {
     color: #B08EAD !important;
 }
-a .btn_1 {
-    color: #fff;
+.banner_text_iner .btn_1 {
+    color: #fff !important;
 }
 
 /* Navigation bar */
@@ -48,6 +43,25 @@ a .btn_1 {
 .dropdown-item:active {
     background-color: #4B3049 !important;
     color: #fff;
+}
+@media (max-width: 768px) {
+    .navbar-brand {
+        display: none;
+    }
+}
+
+@media (max-width: 991px) {
+    .header-container {
+        padding-top: 116px;
+    }
+
+    body {
+        height: calc(100vh - 116px);
+    }
+
+    .display-4.logo-font.text-black {
+        font-size: 2rem;
+    }
 }
 
 /* Search form */
@@ -97,26 +111,6 @@ a .btn_1 {
 }
 
 
-@media (max-width: 768px) {
-    .navbar-brand {
-        display: none;
-    }
-}
-
-/* pad the top a bit when navbar is collapsed on mobile */
-@media (max-width: 991px) {
-    .header-container {
-        padding-top: 116px;
-    }
-
-    body {
-        height: calc(100vh - 116px);
-    }
-
-    .display-4.logo-font.text-black {
-        font-size: 2rem;
-    }
-}
 /* 
 .dropdown-menu show {
     background-color: #795376;
@@ -128,11 +122,6 @@ a .btn_1 {
     padding-left: 10px;
 }
 
-.text-sold {
-    text-transform: uppercase;
-    font-weight: 500;
-    font-size: 2rem;
-}
 
 /* Product and Product Details Page */
 .dropdown .select_option {
@@ -167,51 +156,47 @@ a .btn_1 {
     color: #795376 !important;
     line-height: 1;
 } */
-
+/* Product details page */
 .single_product_item p {
     line-height: 1.2;
     font-size: 16px;
 }
-
 .btn-3 {
     padding: 12px;
 }
-
 .product_image_area .single_product_text {
     margin: 30px 0 30px;
 }
-
 hr {
     border: 1px solid #B08EAD;
 }
-
 .add_to_cart p {
     margin: 5px;
 }
-
 .product_image_area .single_product_text p {
     margin-top: 30px;
     color: #707070;
 }
-
 .price {
     margin-top: 10px !important;
+}
+.text-sold {
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 2rem;
 }
 
 /* Shopping cart */
 .pointer {
     cursor: pointer;
 }
-
 .column_centered {
     text-align: center;
 }
-
 .column_centered a,
 i {
     color: #795376;
 }
-
 .column_right {
     text-align: right;
 }
@@ -224,37 +209,30 @@ i {
     width: 350px;
     z-index: 5000;
 }
-
 .cart-notification-wrapper {
     height: 95px;
     overflow-x: hidden;
     overflow-y: auto;
 }
-
 .toast {
     font-family: "Rubik", sans-serif;
     font-size: 16px;
     color: #4B3049;
 }
-
 .toast-border {
     border-radius: 20px;
     border: 3px solid #4B3049;
 }
-
 .toast-header {
     padding: 7px;
     align-items: center;
 }
-
 .toast-header i {
     padding-right: 7px;
 }
-
 .toast-body {
     color: #4B3049;
 }
-
 .cart_area section_padding {
     padding: 50px 0px;
 }
@@ -274,8 +252,6 @@ i {
     position: relative;
     overflow: hidden;
 }
-
-/* Add product form */
 .btn-file input[type="file"] {
     position: absolute;
     top: 0;
@@ -285,67 +261,40 @@ i {
     opacity: 0;
     cursor: pointer;
 }
-
 .custom-checkbox .custom-control-label::before {
     border-radius: 0;
     border-color: #dc3545;
 }
-
 .custom-checkbox .custom-control-input:checked~.custom-control-label::before {
     background-color: #dc3545;
     border-color: #dc3545;
     border-radius: 0;
 }
+
+/* Hover effect for details/edit/delete icons */
 .description_hide {
     display: none !important;
     font-size: 0.5rem;
 }
-
 .descriptive_text:hover+.description_hide {
     display: block;
     color: #B08EAD;
     font-size: 0.5rem;
 }
-
 #edit_delete_details {
     font-size: 1.75rem;
     align-items: center;
 }
+
 /* Remove cart amount in navbar on small screens */
 @media only screen and (max-width: 350px) {
     .show-total {
         display: none;
     }
-
     .nav-link {
         padding: 0.5rem 0.5rem;
     }
 }
-
-/* Mailchimp Subscribe area */
-#mc-embedded-subscribe {
-
-    display: inline-block;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    max-width: fit-content;
-    padding: 17px 50px;
-    border-radius: 50px;
-    background-color: #B08EAD;
-    border: 0;
-    font-size: 15px;
-    font-weight: 500;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    text-transform: capitalize;
-    color: #fff;
-
-    &:hover {
-        background-color: #fff;
-        color: #795376;
-    }
-}
-
 
 /* .container .box_1170>p {
     font-family: "Rubik", sans-serif;
@@ -369,39 +318,16 @@ h6 {
     margin-bottom: 0.5rem;
 } */
 
-.typography h3 {
-    margin-bottom: 0.7rem;
-    margin-top: 0.7rem;
-}
-
-.typography h4,
-h5 {
-    margin-bottom: 0.5rem;
-    margin-top: 0.5rem;
-}
-
-.typography strong {
-    color: #828bb2;
-}
-
-.typography a {
-    color: #707070;
-    text-decoration: underline;
-}
-
-.typography h5 {
-    padding-left: 10px;
-}
 
 
-/* Subscribe Form  */
+
+/* Mailchimp subscription form  */
 .subscribe_form_mailchimp {
     margin: 0 auto;
     margin-top: 45px;
     position: relative;
     max-width: 558px;
 }
-
 .subscribe_form_mailchimp > input {
     border: 1px solid #fff;
     width: 100%;
@@ -411,7 +337,6 @@ h5 {
     padding: 19px 30px;
     line-height: 20px;
 }
-
 .subscribe_form_mailchimp > btn_1 {
     width: 50%;
     padding: 15px 30px;
@@ -421,9 +346,6 @@ h5 {
     right: 5px;
     top: 5px;
 }
-
-
-/* Mailchimp image link */
 .refferal_badge {
     width: 220px; 
     height: 40px; 
@@ -434,4 +356,57 @@ h5 {
     display: inline-block; 
     background-color: transparent; 
     border-radius: 4px;
+}
+#mc-embedded-subscribe {
+
+    display: inline-block;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    max-width: fit-content;
+    padding: 17px 50px;
+    border-radius: 50px;
+    background-color: #B08EAD;
+    border: 0;
+    font-size: 15px;
+    font-weight: 500;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    text-transform: capitalize;
+    color: #fff;
+
+    &:hover {
+        background-color: #fff;
+        color: #795376;
+    }
+}
+
+/* Privacy Policy */
+.btn-link {
+    color: #795376;
+    font-size: 14px;
+}
+.btn-link:focus, .btn-link:hover {
+    color: #828bb2;
+}
+.accordion + i {
+    color: #795376;
+} 
+.typography h3 {
+    margin-bottom: 0.7rem;
+    margin-top: 0.7rem;
+}
+.typography h4,
+h5 {
+    margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
+}
+.typography strong {
+    color: #828bb2;
+}
+.typography a {
+    color: #707070;
+    text-decoration: underline;
+}
+.typography h5 {
+    padding-left: 10px;
 }
