--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -7,7 +7,7 @@
   border: 1px solid transparent;
   border-radius: 5px;
   background-color: white;
-  box-shadow: 0 1px 3px 0 #e6ebf1;
+  box-shadow: 0 1px 3px 0 #B08EAD;
   -webkit-transition: box-shadow 150ms ease;
   transition: box-shadow 150ms ease;
 }
