--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,7 +10,7 @@
                     <div class="banner_text">
                         <div class="banner_text_iner">
                             <h1>Hanneles Original Art</h1>
-                            <p>Don't buy commodity prints when you can buy affordable original paintings!</p>
+                            <p>Don't buy commodity prints when you can get affordable original paintings!</p>
                             <a href="{% url 'products' %}" aria-label="Visit our paintings page" class="btn_1 btn-white-text">Buy real
                                 art</a>
                         </div>
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="banner_img">
-            <img src="{% static 'img/banner.png' %}" alt="Flower image" class="img-fluid">
+            <img src="{% static 'img/banner.png' %}" alt="Flower painting" class="img-fluid">
         </div>
     </section>
 <!-- Banner Part End-->
