--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -17,8 +17,13 @@
 
                     <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                         <ul class="navbar-nav">
+                            <li class="nav-item d-block d-lg-none">
+                                <a class="logo-font nav-link" href="{% url 'home' %}" id="home-link">
+                                    Home
+                                </a>
+                            </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_1"
+                                <a class="nav-link dropdown-toggle" href="" id="navbarDropdown_1"
                                     role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Art Gallery
                                 </a>
