Style index page for small screens

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -101,7 +101,8 @@
     
     {% else %}
         <p><h6>Your shopping cart is empty.</h6></p>
-        <a href="{% url 'products' %}" class="btn_1">Buy real art</a>
+        <p></p>
+        <a href="{% url 'products' %}" class="btn_1 text-white mt-5">Buy real art</a>
         
     {% endif %}
 
