--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block accountcss %}
+{{ block.super }}
 <link rel="stylesheet" href="{% static 'account/css/account.css' %}">
 {% endblock %}
 
