--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -10,9 +10,10 @@
                 <div class="banner_text">
                     <div class="banner_text_iner">
                         <h1>Ooops! Sorry!</h1>
-                        <p>This painting has not been painted yet!</p>
+                        <p>The painting you requested has not been painted yet!</p>
                         <p>Why don't you check out one of the other paintings in the meantime!</p>
-                        <p>Error 404 Page not found</p>
+                        <p></p>
+                        <p>Error 404 - Page not found</p>
                         <a href="{% url 'products' %}" class="btn_1">All paintings</a>
                     </div>
                 </div>
