--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,7 +11,7 @@
                         <div class="banner_text_iner">
                             <h1>Hanneles Original Art</h1>
                             <p>Don't buy commodity prints when you can get affordable original paintings!</p>
-                            <a href="{% url 'products' %}" aria-label="Visit our paintings page" class="btn_1 btn-white-text">Buy real
+                            <a href="{% url 'products' %}" aria-label="Visit our paintings page" class="btn_1 text-white">Buy real
                                 art</a>
                         </div>
                     </div>
@@ -91,8 +91,7 @@
                     <div class="footer_menu">
                         <div class="footer_logo">
                             <a href="{% url 'home' %}"><img src="https://hanneles-art-gallery.s3.eu-north-1.amazonaws.com/media/logo.png" alt="#"></a>
-                        </div>
-                        
+                        </div>                      
                     </div>
                 </div>
                 <div class="col-6">
@@ -151,7 +150,4 @@
     var $mcj = jQuery.noConflict(true);
 </script>
 </div>
-{% endblock %}
-{% block niceselectjs %}
-<script src="{% static 'home/js/jquery.nice-select.min.js' %}"></script>
 {% endblock %}
